--- a/app/src/main/res/layout/activity_scan_options.xml
+++ b/app/src/main/res/layout/activity_scan_options.xml
@@ -7,4 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".features.scanOption.ScanOptionsActivity">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_45sdp"
+        android:background="@color/bg_toolbar"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Scan Option"
+            android:textColor="@color/white"
+            android:fontFamily="@font/encode_sans_bold"
+            android:textSize="@dimen/_15ssp"
+            />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
