--- a/app/src/main/res/layout/activity_manual_inserting.xml
+++ b/app/src/main/res/layout/activity_manual_inserting.xml
@@ -146,6 +146,7 @@
 
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnOk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_30sdp"
