--- a/app/src/main/res/layout/activity_rfidscan_approved.xml
+++ b/app/src/main/res/layout/activity_rfidscan_approved.xml
@@ -73,6 +73,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnOk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_30sdp"
