--- a/app/src/main/res/layout/dialog_congratulation.xml
+++ b/app/src/main/res/layout/dialog_congratulation.xml
@@ -62,7 +62,7 @@
 
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton"
+                android:id="@+id/btnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_30sdp"
