--- a/app/src/main/res/layout/dialog_oops.xml
+++ b/app/src/main/res/layout/dialog_oops.xml
@@ -56,7 +56,7 @@
                 android:textAllCaps="false"
                 android:layout_marginBottom="@dimen/_6sdp"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toTopOf="@+id/materialButton"
+                app:layout_constraintBottom_toTopOf="@+id/btnBack"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:backgroundTint="@android:color/transparent"
@@ -64,7 +64,7 @@
 
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton"
+                android:id="@+id/btnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_30sdp"
