--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,38 +39,219 @@
 
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/materialCardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentPadding="@dimen/_20sdp"
-            android:layout_marginTop="-40dp"
-            android:layout_marginHorizontal="@dimen/_25sdp"
+            android:layout_marginHorizontal="@dimen/_20sdp"
+            android:layout_marginTop="-70dp"
+            app:cardBackgroundColor="#F2EFF9"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:contentPadding="@dimen/_10sdp"
             app:layout_constraintTop_toBottomOf="@+id/holderImage"
-            >
+            tools:layout_editor_absoluteX="26dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
+
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tvName"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/encode_sans_bold"
                     android:text="Alexandra Vasily"
                     android:textColor="#46185B"
-                    android:fontFamily="@font/encode_sans_bold"
                     android:textSize="@dimen/_14ssp"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    />
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvName">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_weight="1.2"
+                        android:text="Card:"
+                        android:fontFamily="@font/encode_sans"
+                        android:textColor="#9BA0A6" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_weight="3"
+                        android:fontFamily="@font/encode_sans"
+                        android:text="**** 1234"
+                        android:textColor="#9BA0A6" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/holderBarCode"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_weight="1.2"
+                        android:text="barcode:"
+                        android:fontFamily="@font/encode_sans"
+                        android:textColor="#9BA0A6" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_weight="3"
+                        android:fontFamily="@font/encode_sans"
+                        android:text="**** 1234"
+                        android:textColor="#9BA0A6" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:gravity="center"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/holderBarCode">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_wallet"
+                        app:tint="#46185B" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:text="134 pt"
+                        android:fontFamily="@font/encode_sans"
+                        android:textColor="#46185B"
+                        android:textSize="@dimen/_8ssp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_20sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:gravity="center"
+                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+                    app:layout_constraintTop_toBottomOf="@+id/holderBarCode">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_dollar"
+                        app:tint="#46185B" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:text="$ 13,254"
+                        android:fontFamily="@font/encode_sans"
+                        android:textColor="#46185B"
+                        android:textSize="@dimen/_8ssp" />
+                </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/loyality"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:text="issued 12-14-23"
+                    android:textColor="#9BA0A6"
+                    android:fontFamily="@font/encode_sans"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/imageView2"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
+
+
+        <TextView
+            android:id="@+id/tvCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/encode_sans_semibold"
+            android:text="view all 125 purchases"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/_3sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvCount">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                    <include layout="@layout/layout_history"/>
+                </LinearLayout>
+            </ScrollView>
+
+
+
+        </LinearLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
