--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
         <item>@font/adamina</item>
+        <item>@font/encode_sans</item>
         <item>@font/encode_sans_black</item>
         <item>@font/encode_sans_bold</item>
         <item>@font/encode_sans_semibold</item>
