bar code check and manual check

--- a/app/src/main/res/layout/activity_manual_inserting.xml
+++ b/app/src/main/res/layout/activity_manual_inserting.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".features.manualInserting.ManualInsertingActivity">
+    tools:context=".features.manualCheck.ManualCheckActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -88,6 +88,7 @@
                     android:textColor="@color/white" />
 
                 <EditText
+                    android:id="@+id/etName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3sdp"
@@ -111,6 +112,7 @@
                     android:textColor="@color/white" />
 
                 <EditText
+                    android:id="@+id/etEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3sdp"
@@ -134,6 +136,7 @@
                     android:textColor="@color/white" />
 
                 <EditText
+                    android:id="@+id/etPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3sdp"
