1. email check 2. input type phone number 3. Customer information

--- a/app/src/main/res/layout/activity_scan_options.xml
+++ b/app/src/main/res/layout/activity_scan_options.xml
@@ -208,7 +208,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/adamina"
-                    android:text="Manual Inserting"
+                    android:text="Manual Check"
                     android:textColor="#3992F4" />
 
                 <TextView
