--- a/app/src/main/res/layout/activity_manual_check.xml
+++ b/app/src/main/res/layout/activity_manual_check.xml
@@ -116,6 +116,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3sdp"
+                    android:inputType="textEmailAddress"
                     android:backgroundTint="@color/white"
                     android:textColor="@color/white" />
 
@@ -140,6 +141,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_3sdp"
+                    android:inputType="phone"
                     android:backgroundTint="@color/white"
                     android:textColor="@color/white" />
 
