--- a/app/src/main/res/layout/activity_scan_options.xml
+++ b/app/src/main/res/layout/activity_scan_options.xml
@@ -85,6 +85,7 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
             android:id="@+id/scanQrCode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
